--- a/style.css
+++ b/style.css
@@ -7,3 +7,15 @@
   background-image: none;
   background-repeat: no-repeat;
  }
+
+ /* .carousel-inner > .item > img{
+margin:auto;
+} */
+
+.carousel-inner > .item > img{
+margin:auto;
+width:100%
+}
+#id{
+  margin:100px;
+}
